--- a/dot_config/hypr/userprefs.conf
+++ b/dot_config/hypr/userprefs.conf
@@ -6,8 +6,6 @@
 # Set your personal hyprland configuration here
 # for sample file, please refer https://github.com/prasanthrangan/hyprdots/blob/main/Configs/.config/hypr/userprefs.t2
 
-input {
-    kb_variant = colemak_dh
-}
-
-bind = SUPER, F, exec, thorium-browser
+unbind = SUPER, F
+bind = SUPER, Y, exec, mpv $(wl-paste) --ytdl-format="bestvideo[height<=?1080]+bestaudio/best"
+bind = SUPER ALT, Y, exec, mpv $(wl-paste) --ytdl-format="bestvideo[height<=?1080]+bestaudio/best" --no-video
