--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -3,9 +3,11 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-font_size 12.0
+font_size 14.0
 window_padding_width 25
 include themes/theme.conf
+allow_remote_control socket-only
+listen_on unix:/tmp/kitty
 #background_opacity 0.60
 #hide_window_decorations yes
 #confirm_os_window_close 0
