--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -1,6 +1,6 @@
 {{- if ne .chezmoi.os "darwin" }}
 .config/Brewfile
-dot_aerospace.toml
+.aerospace.toml
 {{- end }}
 {{- if ne .chezmoi.os "linux" }}
 .config/hypr
