Update macos pkg installation files

--- a/dot_config/Brewfile
+++ b/dot_config/Brewfile
@@ -4,6 +4,7 @@ tap "oven-sh/bun"
 brew "bun"
 brew "chezmoi"
 brew "cowsay"
+brew "docker"
 brew "eza"
 brew "fortune"
 brew "fzf"
@@ -34,6 +35,7 @@ tap "homebrew/cask-fonts"
 cask "font-caskaydia-cove-nerd-font"
 
 # Applications
+cask "background-music"
 cask "obsidian"
 cask "telegram-desktop"
 cask "plover"
