--- a/dot_config/hypr/keybindings.conf
+++ b/dot_config/hypr/keybindings.conf
@@ -12,7 +12,7 @@ $mainMod = SUPER # windows key
 # assign apps
 $term = kitty
 $editor = code --disable-gpu
-$file = dolphin
+$file = kitty yazi
 $browser = brave 
 
 # Window/Session actions
