--- a/dot_config/hypr/keybindings.conf
+++ b/dot_config/hypr/keybindings.conf
@@ -35,9 +35,10 @@ bind = $mainMod, F, exec, $browser # open browser
 bind = $CONTROL SHIFT, ESCAPE, exec, $scrPath/sysmonlaunch.sh  # open htop/btop if installed or default to top (system monitor)
 bind = SUPER, Y, exec, mpv $(wl-paste) --ytdl-format="bestvideo[height<=?1080]+bestaudio/best"
 bind = SUPER ALT, Y, exec, mpv $(wl-paste) --ytdl-format="bestvideo[height<=?1080]+bestaudio/best" --no-video
+bind = $mainMod, M, exec, [workspace 10 silent;noanim] moonlight stream MacMini Desktop
 
 # Rofi is toggled on/off if you repeat the key presses
-bind = $mainMod, A, exec, pkill -x rofi || $scrPath/rofilaunch.sh d # launch desktop applications
+bind = $mainMod, space, exec, pkill -x rofi || $scrPath/rofilaunch.sh d # launch desktop applications
 bind = $mainMod, tab, exec, pkill -x rofi || $scrPath/rofilaunch.sh w # switch between desktop applications
 bind = $mainMod, R, exec, pkill -x rofi || $scrPath/rofilaunch.sh f # browse system files
 
