Fix macos zshrc

--- a/dot_config/Brewfile
+++ b/dot_config/Brewfile
@@ -1,10 +1,11 @@
 # Tools and essentials
-cask "aerospace"
 tap "oven-sh/bun"
+tap "Code-Hex/tap"
+tap "sl4m/rust-crate"
+cask "aerospace"
 brew "bun"
 brew "chezmoi"
-tap "Code-Hex/tap"
-brew "neo-cowsay"
+brew "cowsay"
 brew "docker"
 brew "eza"
 brew "fortune"
@@ -23,7 +24,9 @@ brew "powerlevel10k"
 brew "python@3.12"
 brew "ripgrep"
 brew "rustup"
+brew "sl4m/rust-crate/brew-crate"
 cask "stats"
+brew "thefuck"
 brew "tmux"
 brew "tpm"
 brew "zsh-autosuggestions"
@@ -36,12 +39,12 @@ tap "homebrew/cask-fonts"
 cask "font-caskaydia-cove-nerd-font"
 
 # Applications
+tap "LizardByte/homebrew"
+tap "homebrew/services"
 cask "background-music"
 cask "obsidian"
 cask "telegram-desktop"
 cask "plover"
-tap "LizardByte/homebrew"
 brew "sunshine"
-tap "homebrew/services"
 #after "services start lizardbyte/homebrew/sunshine"
 cask "zerotier-one"
