--- a/dot_config/Brewfile
+++ b/dot_config/Brewfile
@@ -21,7 +21,8 @@ brew "neovim"
 brew "node"
 brew "oh-my-posh"
 brew "powerlevel10k"
-brew "python@3.12"
+brew "python-tk@3.11"
+brew "python@3.11"
 brew "ripgrep"
 brew "rustup"
 brew "sl4m/rust-crate/brew-crate"
